Python-Django-Blog-Website/k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-blog
  labels:
    name: django-blog
