Python-Django-Blog-Website/k8s-manifests/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-blog
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
